// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon 传name 1`] = `
<svg
  className="cui-icon"
  fill="currentColor"
>
  <use
    xlinkHref="#emoji-cool"
  />
</svg>
`;

exports[`Icon 传name、className 1`] = `
<svg
  className="cui-icon icon"
  fill="currentColor"
>
  <use
    xlinkHref="#emoji-happy"
  />
</svg>
`;
